// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DoDontList > should match snapshot - type do 1`] = `
<div
  class="nhsuk-do-dont-list"
  data-testid="do-dont-list"
>
  <h3
    class="nhsuk-do-dont-list__label"
  >
    Do
  </h3>
  <ul
    class="nhsuk-list nhsuk-list--tick"
    role="list"
  >
    <li>
      <svg
        aria-hidden="true"
        class="nhsuk-icon nhsuk-icon__tick"
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.4 7.8l-8.5 8.4L5.6 12"
          stroke="#007f3b"
          stroke-linecap="round"
          stroke-width="4"
        />
      </svg>
      Do this
    </li>
    <li>
      <svg
        aria-hidden="true"
        class="nhsuk-icon nhsuk-icon__tick"
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.4 7.8l-8.5 8.4L5.6 12"
          stroke="#007f3b"
          stroke-linecap="round"
          stroke-width="4"
        />
      </svg>
      Do that
    </li>
  </ul>
</div>
`;

exports[`DoDontList > should match snapshot - type dont 1`] = `
<div
  class="nhsuk-do-dont-list"
  data-testid="do-dont-list"
>
  <h3
    class="nhsuk-do-dont-list__label"
  >
    Don't
  </h3>
  <ul
    class="nhsuk-list nhsuk-list--cross"
    role="list"
  >
    <li>
      <svg
        aria-hidden="true"
        class="nhsuk-icon nhsuk-icon__cross"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M17 18.5c-.4 0-.8-.1-1.1-.4l-10-10c-.6-.6-.6-1.6 0-2.1.6-.6 1.5-.6 2.1 0l10 10c.6.6.6 1.5 0 2.1-.3.3-.6.4-1 .4z"
          fill="#d5281b"
        />
        <path
          d="M7 18.5c-.4 0-.8-.1-1.1-.4-.6-.6-.6-1.5 0-2.1l10-10c.6-.6 1.5-.6 2.1 0 .6.6.6 1.5 0 2.1l-10 10c-.3.3-.6.4-1 .4z"
          fill="#d5281b"
        />
      </svg>
      Do this
    </li>
    <li>
      <svg
        aria-hidden="true"
        class="nhsuk-icon nhsuk-icon__cross"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M17 18.5c-.4 0-.8-.1-1.1-.4l-10-10c-.6-.6-.6-1.6 0-2.1.6-.6 1.5-.6 2.1 0l10 10c.6.6.6 1.5 0 2.1-.3.3-.6.4-1 .4z"
          fill="#d5281b"
        />
        <path
          d="M7 18.5c-.4 0-.8-.1-1.1-.4-.6-.6-.6-1.5 0-2.1l10-10c.6-.6 1.5-.6 2.1 0 .6.6.6 1.5 0 2.1l-10 10c-.3.3-.6.4-1 .4z"
          fill="#d5281b"
        />
      </svg>
      Do that
    </li>
  </ul>
</div>
`;

exports[`DoDontList > should match snapshot 1`] = `
<div
  class="nhsuk-do-dont-list"
  data-testid="do-dont-list"
>
  <h3
    class="nhsuk-do-dont-list__label"
  >
    Do
  </h3>
  <ul
    class="nhsuk-list nhsuk-list--tick"
    role="list"
  >
    <li>
      <svg
        aria-hidden="true"
        class="nhsuk-icon nhsuk-icon__tick"
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.4 7.8l-8.5 8.4L5.6 12"
          stroke="#007f3b"
          stroke-linecap="round"
          stroke-width="4"
        />
      </svg>
      Do this
    </li>
    <li>
      <svg
        aria-hidden="true"
        class="nhsuk-icon nhsuk-icon__tick"
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.4 7.8l-8.5 8.4L5.6 12"
          stroke="#007f3b"
          stroke-linecap="round"
          stroke-width="4"
        />
      </svg>
      Do that
    </li>
  </ul>
</div>
`;
